--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,4 +60,12 @@ jobs:
     steps:
       - name: Build as Standalone Source
         shell: bash
-        run: dotnet build ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true
+        run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true
+
+  build-docker:
+    needs: [build-source, version]
+    runs-on: ["self-hosted", "run-${{github.run_id}}"]
+    steps:
+      - name: Build Docker Image
+        shell: bash
+        run: docker build -t ghcr.io/nano-dna-studios/githubselfrunner:${{ needs.version.outputs.version }} .
