--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
         run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true
 
   build-docker:
-    needs: [build-source, version]
+    needs: build-source
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
     steps:
       - name: Build Docker Image
